# PR_consequence_sim

./: .env.example  .gitignore  .vercelignore  README.md  package.json  pnpm-lock.yaml  vercel.json
apps/web/: eslint.config.mjs  next.config.ts  package.json
apps/web/app/: globals.css  intake.css  layout.tsx  not-found.tsx  page.tsx  robots.ts
apps/web/app/analyze/: page.tsx
apps/web/app/demo/: page.tsx
apps/web/app/methodology/: page.tsx
apps/web/components/: analyze-intake.test.tsx  analyze-intake.tsx  background.test.ts  dotted-background.tsx  site-nav.tsx  workspace.tsx
apps/web/lib/: api.test.ts  api.ts  format.test.ts  format.ts  types.ts
docs/: ai-build-log.md  api.md  architecture.md  demo-video-script.md  latent-twin-design.md  submission-pack.md
sample-inputs/: README.md  sample-change.diff  sample-change.patch  sample-project.bundle
sample-inputs/source-repository/: package.json
sample-inputs/source-repository/src/: cart.ts
sample-inputs/source-repository/tests/: cart.test.ts
scripts/: generate-sample-inputs.sh
services/engine/: pyproject.toml  requirements.txt
services/engine/app/: __init__.py  evaluation.py  explanations.py  main.py  models.py  service.py  store.py  uploads.py
services/engine/app/predictors/: core.py
services/engine/fixtures/: pull_requests.json  repositories.json
services/engine/tests/: test_api.py  test_engine.py  test_uploads.py
