[project]
name = "pr-consequence-simulator-engine"
version = "1.0.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi==0.119.1",
  "pydantic==2.12.3",
  "python-multipart==0.0.20",
  "openai==2.13.0",
  "dulwich==0.25.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
[tool.ruff.lint]
ignore = ["E701", "E702", "E731", "F403", "F405"]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401"]
[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
strict = true
exclude = ["tests"]
[tool.pytest.ini_options]
pythonpath = ["services/engine"]
